# faaas

./: .dockerignore  .env  .gitignore  Cargo.toml  README.md  docker-compose.yaml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
.zed/: settings.json  tasks.json
benchmarks/: README.md
benchmarks/faaasc-adaptive-results/: .gitignore  package.json
benchmarks/faaasc-artillery/: .gitignore  artillery.yaml  package.json  run-adaptive.sh  run-mem.sh  run.sh
benchmarks/faaasc-artillery-billed-overhead-results/: generate.py  package.json  results.json
benchmarks/faaasc-artillery-concat-results/: generate.py  package.json
benchmarks/faaasc-artillery-mem-results/: cloud-watch-query.txt  generate.py  package.json  results.json
benchmarks/faaasc-artillery-results/: package.json
benchmarks/faaasc-aws-results/: .gitignore  continuation_breakdown-only-faaas.pickle  continuation_breakdown-with-http.pickle  continuation_breakdown.pickle  package.json
benchmarks/perf-v8-event-loop/: Dockerfile  package.json  tsconfig.json
benchmarks/perf-v8-event-loop-artillery/: Dockerfile  artillery.yaml  package.json
benchmarks/perf-v8-event-loop-db/: .env  Dockerfile  index.ts  package.json
benchmarks/perf-v8-event-loop-experiment/: .env  .gitignore  docker-compose.base.yaml  docker-compose.cpu.yaml  docker-compose.io.yaml  docker-compose.time.yaml  docker-compose.wall.yaml  docker-compose.yaml  experiment_local.sh  local.sh  package.json
benchmarks/perf-v8-event-loop-results/: package.json  profile.dot
benchmarks/perf-v8-event-loop-results-pprof/: generate-pprof-graphs.sh  package.json
benchmarks/suites/: README.md
diagrams/: README.md
diagrams/arch-overview-source/: package.json
diagrams/arch-overview-split/: package.json
diagrams/aws-faaas-arch/: package.json
diagrams/aws-lambda-exec-env/: package.json
diagrams/aws-lambda-slot-placement/: package.json
diagrams/db-response-times/: oltp-q1-resp-times.json  package.json  tpch-q1-resp-times.json  tpch-q2-resp-times.json
diagrams/double-billing-problem/: Source.gv  package.json
diagrams/faaas-arch/: package.json
diagrams/faaas-message-passing/: package.json
diagrams/faaasc-ast-split/: package.json
diagrams/generic-cost-model/: generate.py  package.json
diagrams/pricing/: package.json
docs/: .gitignore  NOTES.md  mycsv.csv  package.json  profile.dot  references.bib  report.tex  resps.csv
docs/includes/: includes.tex  titlepage.tex
pkg/: README.md
pkg/boss-faaas-engine/: .gitignore  CMakeLists.txt  README.md  package.json
pkg/echo-engine/: Cargo.toml  Dockerfile  deploy.sh  package.json
pkg/faaasc/: .gitignore  Cargo.toml  README.md  composition.wasm  package.json  test-gen.ts  test.ts
pkg/faaasc/lib/: index.ts
pkg/faaasc/src/: js.rs  lib.rs  main.rs  resolve.rs  workflow.rs
pkg/faaasc/src/js/: capture.rs  capture_scope.rs  directive.rs  eval_lit.rs  generate.rs  generate_split.rs  graph.rs
pkg/faaasc/src/js/capture/: cap_block_stmt.rs  cap_break_stmt.rs  cap_continue_stmt.rs  cap_decl.rs  cap_do_while_stmt.rs  cap_expr.rs  cap_expr_stmt.rs  cap_for_in_stmt.rs  cap_for_of_stmt.rs  cap_for_stmt.rs  cap_if_stmt.rs  cap_pat.rs  cap_ret_stmt.rs  cap_stmt.rs  cap_switch_stmt.rs  cap_throw_stmt.rs  cap_try_stmt.rs  cap_var_decl.rs  cap_while_stmt.rs
pkg/faaasc/src/js/generate/: gen_block_stmt.rs  gen_decl.rs  gen_export_decl.rs  gen_expr.rs  gen_expr_stmt.rs  gen_fn_decl.rs  gen_for_in_stmt.rs  gen_for_of_stmt.rs  gen_function.rs  gen_if_stmt.rs  gen_module.rs  gen_module_decl.rs  gen_module_item.rs  gen_ret_stmt.rs  gen_stmt.rs  gen_throw_stmt.rs  gen_try_stmt.rs  gen_var_decl.rs  gen_while_stmt.rs
pkg/faaasc/src/js/generate_split/: gen_block_stmt.rs  gen_decl.rs  gen_export_decl.rs  gen_expr.rs  gen_expr_stmt.rs  gen_fn_decl.rs  gen_function.rs  gen_module.rs  gen_module_decl.rs  gen_module_item.rs  gen_stmt.rs
pkg/faaasc/src/js/graph/: graph_block_stmt.rs  graph_decl.rs  graph_do_while_stmt.rs  graph_export_decl.rs  graph_expr.rs  graph_expr_stmt.rs  graph_fn_decl.rs  graph_for_stmt.rs  graph_function.rs  graph_module.rs  graph_module_decl.rs  graph_module_item.rs  graph_ret_stmt.rs  graph_stmt.rs  graph_switch_case.rs  graph_switch_stmt.rs  graph_throw_stmt.rs  graph_var_decl.rs
pkg/faaasc/src/workflow/: dependencies.rs  extract.rs  generate.rs  mod.rs  primitives.rs  register.rs
pkg/faaastime/: .env  .gitignore  Cargo.toml  build.rs  gen.rs  out.rs  package.json
pkg/faaastime/js/: entrypoint.js
pkg/faaastime/src/: handler.rs  main.rs  registry.rs  state.rs  task-ref.rs  task.rs  timed.rs  wasi.rs
pkg/faaastime/src/registry/: storage.rs
pkg/faaastime/wit/: deps.toml  handler.wit  world.wit
pkg/gateway/: .env  Cargo.toml  Dockerfile  deploy.sh  package.json
pkg/gateway/src/: main.rs
pkg/mq/: Cargo.toml  package.json
pkg/postgres/: package.json
pkg/postgres-faaas-engine/: .env  Cargo.toml  Dockerfile  deploy.sh  package.json
pkg/postgres-faaas-engine/src/: main.rs
pkg/primitives/: README.md
pkg/primitives/condition/: Cargo.toml  package.json
pkg/primitives/condition/src/: bindings.rs  lib.rs
pkg/primitives/condition/wit/: world.wit
pkg/primitives/example/task1/: Cargo.toml  package.json
pkg/primitives/example/task1/src/: bindings.rs  lib.rs
pkg/primitives/example/tasks/inc_pet/: Cargo.toml  package.json
pkg/primitives/example/tasks/inc_pet/src/: lib.rs
pkg/primitives/linear/: Cargo.toml  package.json
pkg/primitives/linear/src/: bindings.rs  lib.rs
pkg/primitives/linear/wit/: world.wit
pkg/registry/: .env  package.json
pkg/runjs/: Cargo.toml  package.json
pkg/runjs/.cargo/: config.toml
pkg/runjs/js/: entrypoint.js
pkg/runjs/src/: buffer.rs  console.rs  crypto.rs  faaas.rs  lib.rs  perf_hooks.rs
pkg/runjs/wit/: runjs.wit
pkg/storage/: .env  package.json
pkg/utils/: README.md
stack/: .env  .gitignore  .terraform.lock.hcl  bundle.sh  main.tf  outputs.tf  package.json  terraform.tfstate  terraform.tfstate.backup  variables.tf
stack/src/: handler.js  handler.ts  package.json
(+341 files in other folders)
