[workspace]
resolver = "2"
members = [
    "pkg/echo-engine",
    "pkg/faaasc",
    "pkg/faaastime",
    "pkg/gateway",
    "pkg/mq",
    "pkg/postgres-faaas-engine",
    "pkg/primitives/condition",
    "pkg/primitives/example/tasks/dec_pet",
    "pkg/primitives/example/tasks/get_pet",
    "pkg/primitives/example/tasks/has_permission",
    "pkg/primitives/example/tasks/inc_pet",
    "pkg/primitives/example/tasks/parse_auth",
    "pkg/primitives/linear",
    "pkg/primitives/task",
    "pkg/runjs",
]
