[tool.pyright]
include = [
    "benchmarks/faaasc-aws-results/src",
    "benchmarks/perf-v8-event-loop-results/src",
    "benchmarks/perf-v8-event-loop-results-pprof/src",
    "diagrams/arch-overview-source/src",
    "diagrams/arch-overview-split/src",
    "diagrams/aws-faaas-arch/src",
    "diagrams/aws-lambda-exec-env/src",
    "diagrams/db-response-times/src",
    "diagrams/double-billing-problem/src",
    "diagrams/faaas-arch/src",
    "diagrams/faaas-message-passing/src",
    "diagrams/pricing/src",
    "pkg/utils/resp-monitor",
]
exclude = ["**/node_modules", "**/__pycache__"]

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.11"

venvPath = "."
venv = ".venv"

executionEnvironments = [
    { root = "benchmarks/faaasc-aws-results/src" },
    { root = "benchmarks/perf-v8-event-loop-results/src" },
    { root = "benchmarks/perf-v8-event-loop-results-pprof/src" },
    { root = "diagrams/arch-overview-source/src" },
    { root = "diagrams/arch-overview-split/src" },
    { root = "diagrams/aws-faaas-arch/src" },
    { root = "diagrams/aws-lambda-exec-env/src" },
    { root = "diagrams/db-response-times/src" },
    { root = "diagrams/double-billing-problem/src" },
    { root = "diagrams/faaas-arch/src" },
    { root = "diagrams/faaas-message-passing/src" },
    { root = "diagrams/pricing/src" },
    { root = "pkg/utils/resp-monitor" },
]

[tool.poetry]
name = "faaas"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Oli Callaghan <me@olicallaghan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
diagrams = "^0.23.4"
plotly = "^5.22.0"
tikzplotly = "^0.1.3"
kaleido = "0.2.1"
dot2tex = "^2.11.3"
pydot = "^2.0.0"
pygments = "^2.18.0"
boto3 = "^1.34.122"
scipy = "^1.13.1"
fitter = "^1.7.0"
redis = "^5.0.5"

[tool.poetry.group.lambda-resp-monitor.dependencies]
pandas = "^2.2.2"
scipy = "^1.13.1"
redis = "^5.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
