[package]
name = "faaasc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "faaasc"
test = false
bench = false

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
futures = "0.3.30"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
swc_common = { version = "0.33.25", features = ["tty-emitter"] }
swc_ecma_ast = "0.112.8"
swc_ecma_parser = { version = "0.143.16", features = ["typescript"] }
trait-variant = "0.1.2"
wac-graph = "0.2.0"
