[package]
name = "faaastime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "faaastime"

[dependencies]
anyhow = "1.0.82"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
wasmtime = { version = "20.0.2", features = ["async", "component-model"] }
bytes = "1.6.0"
wasmtime-wasi = "20.0.2"
wasmtime-wasi-http = "20.0.2"
http = "1.1.0"
pin-project = "1.1.5"
bitmaps = "3.2.1"
moka = { version = "0.12.7", features = ["future"] }

[build-dependencies]
anyhow = "1.0.82"
wit-deps = "0.3.1"

[package.metadata.component.target.dependencies]
"faaas:task" = { path = "../primitives/task/wit/world.wit" }
