[package]
name = "faaastime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "faaastime"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.82"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
wasmtime = { version = "21.0.1", features = ["async", "component-model"] }
bytes = "1.6.0"
wasmtime-wasi = "21.0.1"
wasmtime-wasi-http = "21.0.1"
http = "1.1.0"
pin-project = "1.1.5"
bitmaps = "3.2.1"
moka = { version = "0.12.7", features = ["future"] }
aws-sdk-s3 = { version = "1.29.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.4.0", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.0"
faaasc = { version = "0.1.0", path = "../faaasc" }
async-trait = "0.1.80"
amqprs = "1.6.1"
uuid = { version = "1.8.0", features = ["v4"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

[build-dependencies]
anyhow = "1.0.82"
wit-deps = "0.3.1"

[package.metadata.component.target.dependencies]
"faaas:task" = { path = "../primitives/task/wit/world.wit" }
