[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
amqprs = "1.6.1"
anyhow = "1.0.86"
async-trait = "0.1.80"
faaastime = { version = "0.1.0", path = "../faaastime" }
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.4", features = ["full"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
