[package]
name = "postgres-faaas-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
amqprs = "1.6.1"
anyhow = "1.0.86"
faaastime = { version = "0.1.0", path = "../faaastime" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = "0.7.10"
