[package]
name = "runjs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
md-5 = "0.10.6"
pbkdf2 = "0.12.2"
rquickjs = { version = "0.6.2", features = ["bindgen", "loader", "macro"] }
sha2 = "0.10"
wit-bindgen = "0.24.0"
wit-bindgen-rt = "0.24.0"

[package.metadata.component]
package = "component:runjs"
proxy = true

[package.metadata.component.dependencies]


[package.metadata.component.target.dependencies]
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:http" = { path = "wit/deps/http" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:sockets" = { path = "wit/deps/sockets" }
