[package]
name = "condition"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:condition"

[package.metadata.component.target.dependencies]
"faaas:task" = { path = "../task/wit/world.wit" }

[dependencies]
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }
