[package]
name = "inc_pet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:inc-pet"

[package.metadata.component.target]
"path" = "../../../task/wit/world.wit"
"world" = "task"

[dependencies]
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }
